--- a/Ansible_Pipeline_Azure_DevOps.yaml
+++ b/Ansible_Pipeline_Azure_DevOps.yaml
@@ -8,7 +8,7 @@ stages:
 - stage: UninstallPrograms
   jobs:
   - job: RunAnsible
-    displayName: "Désinstaller les programmes sur plusieurs serveurs Windows"
+    displayName: "Désinstaller les programmes sur plusieurs serveurs avec résumé"
     steps:
     - task: UsePythonVersion@0
       inputs:
@@ -21,6 +21,6 @@ stages:
       displayName: 'Installer Ansible et pywinrm'
 
     - script: |
-        echo "Exécution du playbook Ansible sur plusieurs serveurs Windows en parallèle..."
-        ansible-playbook -i inventory_windows.yml uninstall_programs_parallel.yml -f 10
-      displayName: 'Exécuter le playbook en parallèle'
+        echo "Exécution du playbook Ansible avec résumé..."
+        ansible-playbook -i inventory_windows.yml uninstall_programs_summary.yml -f 10
+      displayName: 'Exécuter le playbook en parallèle avec résumé'
